# nonebot-plugin-clash

./: README.md  pyproject.toml
nonebot_plugin_clash/: __init__.py  __main__.py  chart.py  clash.py  config.py  data_source.py  models.py  render.py  utils.py
nonebot_plugin_clash/res/css/: index.css
nonebot_plugin_clash/res/templates/: base.html.jinja  logs.html.jinja  summary.html.jinja
