[project]
name = "nonebot-plugin-clash"
version = "0.1.0"
description = "Manage your clash core using NoneBot2"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "cookit[pydantic]>=0.6.5",
    "nonebot-plugin-alconna>=0.48.0",
    "nonebot-plugin-htmlrender>=0.3.2",
    "yarl>=1.9.4",
    "jinja2>=3.1.4",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-clash"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_clash/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
